--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,39 @@ footer {
     width: 100%
 }
 
+.icon {
+    min-height: 40px;
+    margin-left: -95px;
+    margin-right: -95px;
+    display: flex;
+    padding-top: 25px;
+    justify-content: center;
+    align-items: center;
+    background-color: #212121;
+    border-bottom: solid 2px #717981;
+}
+.icon ul{
+    padding-bottom: 30px;
+}
+.icon li {
+    text-decoration: none;
+    font-size: 40px;
+    display: inline;
+    justify-content: center;
+    align-items: center;
+}
+
+.last {
+    min-height: 80px;
+    text-align: center;
+    background-color: #212121;
+    color: #FFFFFF;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.last p{
+    text-align: center;
+    line-height: 65px;
+    color: #FFFFFF;
+}
+
