--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,35 @@ ul li {
 /*=====================HEADER=======================*/
 
 header {
-    height: 300px;
+    height: 200px;
     background-color: #F5F5F5;
+}
+
+
+.jumbotron {
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+    display: flex;
+    background-image: url(img/bag.jpg); ;
+    justify-content: center;
+    align-items: center;
+}
+
+.billet {
+    z-index: 2;
+    text-align: center;
+    padding-top: 0px;
+    background-color: white;
+    position: absolute;
+    width: 430px;
+}
+
+.presentation_img {
+    display: flex;
+    width: 100%;
 }
 
 h1 {
@@ -61,20 +88,15 @@ h2 {
     font-family: 'PT Serif', serif;
     padding-bottom: 40px;
 }
-.presentation_img {
-    display: flex;
-    margin-left: 0;
-    width: 100%;
-    height: 700px;
 
-}
+
 .article_avant {
-
+    padding: 0;
     background-color: #FFFFFF;
-    height: 100px;
+    width: 100%;
 }
 
-/*=====================ARTICLES=======================*/
+/*=====================GESTION DU CONTAINER=======================*/
 
 .container-fluid {
     text-align: center;
@@ -82,15 +104,23 @@ h2 {
     padding: 0;
 }
 
+/*=====================GESTION DES ARTICLES=======================*/
+
 .article {
     text-align: justify;
     margin: 33px;
 }
+
+/*=====================IMAGES DANS LES POSTS=======================*/
+
 .article_img {
     width: 571px;
     height: 380px;
     background-size: cover;
 }
+
+/*=====================CATEGORIES TITRES AUTEURS DATES=======================*/
+
 .category {
     font-family: 'Lato', sans-serif;
     color: #a60505;
@@ -109,18 +139,19 @@ h2 {
     font-family: 'Lato', sans-serif;
     font-style: italic;
     color: #888888;
-    
 }
-hr {
-    width: 60px;
-    height: 1px;
-    background-color: #a60505;
+
+a {
+    color: #888888;
 }
-p {
-    font-size: 14px;
-    line-height: 28px;
-    
+
+a:hover {
+    color:#a60505;
+    text-decoration: none;
 }
+
+/*=====================CORPS DES POSTS=======================*/
+
 .article {
     text-align: left;
     font-family: 'Lato', sans-serif;
@@ -128,6 +159,29 @@ p {
     margin: 0;
     padding: 0;
 }
+
+p {
+    font-size: 14px;
+    line-height: 28px;
+    
+}
+
+/*=====================BARRE DE PARTAGE=======================*/
+
+hr {
+    width: 60px;
+    height: 1px;
+    background-color: #a60505;
+}
+
+.article {
+    text-align: left;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
+}
+
 .bar::before {
     content: "";
     position: absolute;
@@ -160,6 +214,138 @@ i {
     margin-left: 14px;
 }
 
+i:hover {
+    color: #a60505;
+}
+
+/*=====================GESTION DE LA PAGINATION=======================*/
+
+.pagination a {
+    color: #888888;
+    margin: 0 8px;
+    border-radius: 0;
+    border: 1px solid #888888;
+    font-family: 'Playfair Display';
+    font-weight: bold;
+    text-align: center;
+}
+​
+​
+​
+.pagination a:hover:not(.active) {
+    border-color: black;
+    color: black;
+    background-color: #ffffff;
+}
+​
+​
+​
+.pagination>.active>a {
+    background-color: #a60505;
+    color: white;
+    border-color: #888888;
+}
+
+/*=====================GESTION DES BORDURES EXTERIEURES GAUCHES ET DROITES=======================*/
+
+.pagination-sm>li:first-child>a,
+.pagination-sm>li:first-child>span {
+    border-radius: 0;
+}
+
+​.pagination-sm>li:last-child>a,
+.pagination-sm>li:last-child>span {
+    border-radius: 0;
+}
+
+/*=====================COULEURS DES CHIFFRES DE LA PAGINATION=======================*/
+
+.pagination>li>a,
+.pagination>li>span {
+    color: #888888;
+}
+
+/*=====================SEPARATION DU CONTAINER ET FOOTER=======================*/
+
+​
+.separation {
+    content: "";
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    background-color: #ECECEC;
+}
+
+/*=====================GESTION DU TITRE DES DERNIERES RUBRIQUES=======================*/
+
+h3 {
+    font-family: 'Playfair Display', serif;
+    letter-spacing: 1px;
+    text-align: left;
+    font-size: 16px;
+    line-height: 1.3;
+    font-weight: bold;
+    border-bottom: solid;
+    border-bottom-color: black;
+    border-bottom-style: double;
+}
+
+/*=====================SECTION ABOUT=======================*/
+
+.about-img {
+    width: 363px;
+    height: 245px;
+}
+
+.author-introduction {
+    text-align: left;
+}
+
+/*=====================SECTION RECENT POSTS=======================*/
+
+.recent-post-row {
+    margin-bottom: 10px;
+}
+
+.recent-post-row-2 {
+    border-bottom-style: solid;
+    border-bottom-color: #888888;
+    border-bottom-width: 1px;
+}
+
+.recent-img {
+    width: 120px;
+    height: 80px;
+    margin-bottom: 30px;
+    text-align: left;
+}
+​
+.recent-header {
+    padding: 0;
+    margin: 0;
+    font-family: 'Playfair Display', serif;
+    letter-spacing: 1px;
+    text-align: left;
+    font-size: 16px;
+    line-height: 1.3;
+    font-weight: bold;
+}
+
+​.recent-header:hover {
+    color: #a60505;
+}
+
+.recent-date {
+    text-align: left;
+    font-family: 'Lato', sans-serif;
+    color: #888888;
+    font-size: 14px;
+}
+
+/*=====================FOOTER=======================*/
+
 footer {
     padding: 0;
     margin: 0;
@@ -168,9 +354,18 @@ footer {
     background-color: black;
 }
 
+.insta-img-section {
+    margin-top: 50px;
+}
+
 .img_insta {
     height: 150px;
     max-width: 150px;
+}
+
+.insta-pic {
+    width: 361px;
+    height: 364px;
 }
 
 .container {
