--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,11 @@ h2 {
     height: 380px;
     background-size: cover;
 }
-
+.article_img:hover {
+    cursor: pointer;
+    color: #ccc;
+    transition: 0.3s;
+}
 /*=====================CATEGORIES TITRES AUTEURS DATES=======================*/
 
 .category {
@@ -131,17 +135,19 @@ h2 {
     text-decoration: underline;
     text-decoration-color: #a60505;
     cursor: pointer;
+    transition: 0.3s;
 }
 .post-title {
-    font-family: 'Playfaair Display', serif;
+    font-family: 'Playfair Display', serif;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 22px;
     letter-spacing: 1px;
     margin: 22px;
 }
 .post-title:hover {
     color: #888888;
     cursor: pointer;
+    transition: 0.3s;
 
 }
 .author_date {
@@ -158,6 +164,7 @@ a:hover {
     color:#a60505;
     text-decoration: none;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 /*=====================CORPS DES POSTS=======================*/
@@ -227,6 +234,7 @@ i {
 i:hover {
     color: #a60505;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 /*=====================GESTION DE LA PAGINATION=======================*/
@@ -240,17 +248,14 @@ i:hover {
     font-weight: bold;
     text-align: center;
 }
-​
-​
-​
+
 .pagination a:hover:not(.active) {
     border-color: black;
     color: black;
     background-color: #ffffff;
+    transition: 0.3s;
 }
-​
-​
-​
+
 
 }
 /*.pagination>.active>a {
@@ -266,7 +271,7 @@ i:hover {
     border-radius: 0;
 }
 
-​.pagination-sm>li:last-child>a,
+.pagination-sm>li:last-child>a,
 .pagination-sm>li:last-child>span {
     border-radius: 0;
 }
@@ -282,15 +287,17 @@ i:hover {
     background-color: #a60505;
     color: white;
     border-color: #888888;
+    transition: 0.3s;
 }
 .pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
     border-color: black;
     color: black;
     background-color: #ffffff;
+    transition: 0.3s;
 }
 /*=====================SEPARATION DU CONTAINER ET FOOTER=======================*/
 
-​
+
 
 .separation {
     content: "";
@@ -345,7 +352,7 @@ h3 {
     margin-bottom: 30px;
     text-align: left;
 }
-​
+
 .recent-header {
     padding: 0;
     margin: 0;
@@ -357,9 +364,11 @@ h3 {
     font-weight: bold;
 }
 
-​.recent-header:hover {
+.recent-header:hover {
     color: #a60505;
-    cursor: pointer
+    cursor: pointer;
+    transition: .3s;
+    
 }
 
 .recent-date {
@@ -368,6 +377,12 @@ h3 {
     color: #888888;
     font-size: 14px;
 }
+.insta-pic {
+    width: 361px;
+    height: 364px;
+    margin-bottom: 60px;
+}
+
 
 /*=====================FOOTER=======================*/
 
